# vm-api

./: .env  README.md  docker-compose.yaml
healthcheck-service/: .env.sample  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
healthcheck-service/src/: index.ts
http-api/: .env.sample  Dockerfile  README.md  app.py  pyproject.toml
http-api/migrations/: env.py
http-api/migrations/versions/: 31ea2132a2ee_add_machinehealthstatuses.py  57f04451dad1_add_remote_id_to_machine.py  b544153e600b_add_machines_table.py
http-api/src/: __init__.py  config.py  routes.py
http-api/src/models/: machine.py  machine_health_status.py
http-api/src/services/: machine_health_status_service.py  machine_service.py
http-api/src/util/: response_builder.py
http-api/tests/endpoint/: test_routes.py
http-api/tests/models/: test_machine.py  test_machine_health_status.py
http-api/tests/services/: test_machine_health_status_service.py  test_machine_service.py
vm-service/: .gitignore  Dockerfile  README.md  go.mod  main.go
